# SamRewritten

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  snapcraft_strict.yaml
doc/: CONTRIBUTING.md  DOCUMENTATION.md
package/: .gitignore  PKGBUILD  appimage.Dockerfile  arch.Dockerfile  compose.yaml  rebuild_arch.sh  rebuild_snap.sh  samrewritten.desktop  windows_installer.nsi
snap/gui/: samrewritten.desktop
src/: main.rs
src/backend/: app.rs  app_lister.rs  app_manager.rs  connected_steam.rs  key_value.rs  mod.rs  orchestrator.rs  stat_definitions.rs  tests.rs  types.rs
src/frontend/: achievement.rs  achievement_automatic_view.rs  achievement_manual_view.rs  achievement_view.rs  app_list_view.rs  app_list_view_callbacks.rs  app_view.rs  application_actions.rs  custom_progress_bar_widget.rs  mod.rs  request.rs  shimmer_image.rs  stat.rs  stat_view.rs  steam_app.rs  ui_components.rs
src/steam_client/: create_client.rs  mod.rs  steam_app_list_vtable.rs  steam_app_list_wrapper.rs  steam_apps_001_vtable.rs  steam_apps_001_wrapper.rs  steam_apps_vtable.rs  steam_apps_wrapper.rs  steam_client_vtable.rs  steam_client_wrapper.rs  steam_user_stats_vtable.rs  steam_user_stats_wrapper.rs  steam_user_vtable.rs  steam_user_wrapper.rs  steam_utils_vtable.rs  steam_utils_wrapper.rs  steamworks_types.rs  wrapper_types.rs
src/utils/: app_paths.rs  arguments.rs  bidir_child.rs  dev_println.rs  format.rs  ipc_types.rs  mod.rs
