# =====================================
# SamRewritten Cargo Manifest
# Modern, idiomatic, and well-documented Cargo.toml for the project.
# =====================================

[package]
name = "SamRewritten"
version = "0.1.0"
description = "Steam Achievement Manager Rewritten"
edition = "2024"
authors = [
    "Paul <abonnementspaul -@- gmail.com>",
    "Phillip <phillip.mendel -@- posteo.de>",
    "All SamRewritten contributors"
]


[dependencies]
adw = { version = "0.8.0", package = "libadwaita", features = ["v1_4"], optional = true } # latest as of 2025-07
gtk = { version = "0.10.0", package = "gtk4", features = ["v4_12"] } # latest as of 2025-07
interprocess = "2.2.3"
libloading = "0.8.8"
once_cell = "1.21.3"
quick-xml = { version = "0.38.1", features = ["serialize"] } # latest as of 2025-07
reqwest = { version = "0.12.22", features = ["blocking"] } # latest as of 2025-07
serde = { version = "1.0.196", features = ["derive"] } # latest as of 2025-07
serde_json = "1.0.139"


[target.'cfg(windows)'.dependencies]
winreg = "0.15.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"



# =====================
# Metadata for Packaging
# =====================
[package.metadata.winres]
LegalCopyright = "Copyright © 2025 SamRewritten contributors"
FileDescription = "Steam Achievement Manager Rewritten"
ProductName = "SamRewritten"
ProductVersion = "0.1.0"
FileVersion = "0.1.0"
Icon = "assets/icon.ico"

[package.metadata.appimage]
icon = "assets/icon.ico"
desktop_entry = "package/samrewritten.desktop"



# =====================
# Build Profiles
# =====================
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true



# =====================
# Binaries
# =====================
[[bin]]
name = "samrewritten"
path = "src/main.rs"
